--- a/.env
+++ b/.env
@@ -29,9 +29,9 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7&charset=utf8mb4"
-# DATABASE_URL="mysql://root:@127.0.0.1:3306/agenceloc?serverVersion=8.0.27&charset=utf8mb4"
+ DATABASE_URL="mysql://root:@127.0.0.1:3306/agenceloc?serverVersion=8.0.27&charset=utf8mb4"
 # base de donné heroku
-DATABASE_URL="mysql://d80utalyfw9bf99w:kv1qrlxx1iete2kw@clwxydcjair55xn0.chr7pe7iynqr.eu-west-1.rds.amazonaws.com:3306/yjdn8h62srxe339i"
+# DATABASE_URL="mysql://d80utalyfw9bf99w:kv1qrlxx1iete2kw@clwxydcjair55xn0.chr7pe7iynqr.eu-west-1.rds.amazonaws.com:3306/yjdn8h62srxe339i"
 # mysql://hnmff7zcxg3gl66x:p5e01igbtvzxuf3a@clwxydcjair55xn0.chr7pe7iynqr.eu-west-1.rds.amazonaws.com:3306/ec5d7jaddipr5dxt
 # DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
